[gd_scene load_steps=12 format=3 uid="uid://b6leh4whbo62a"]

[ext_resource type="Script" uid="uid://dgwopn20nnkaj" path="res://scenes/npc_viewer_window/npc_viewer_window.gd" id="1_4mcdv"]
[ext_resource type="PackedScene" uid="uid://ltiplwj5eimm" path="res://components/npc_viewer_window/info_face_texture_rect.tscn" id="2_4mcdv"]
[ext_resource type="Texture2D" uid="uid://cyhtsrcwwv5k4" path="res://assets/info_face/Hombre/Base_b.png" id="2_jcilu"]
[ext_resource type="Texture2D" uid="uid://dwcx70i5bfd0t" path="res://assets/info_face/Hombre/Ears_a.png" id="3_htgb0"]
[ext_resource type="Texture2D" uid="uid://4e8lbqrh0or1" path="res://assets/info_face/Hombre/Eyes_a.png" id="4_4mcdv"]
[ext_resource type="Texture2D" uid="uid://5lysh8svoyis" path="res://assets/info_face/Hombre/Hair_c.png" id="5_a2sdq"]
[ext_resource type="Texture2D" uid="uid://jel7gyyeqbc" path="res://assets/info_face/Hombre/Nose_b.png" id="6_55sft"]
[ext_resource type="Texture2D" uid="uid://byyu5huloc5si" path="res://assets/info_face/Hombre/mouth_d.png" id="7_fujny"]
[ext_resource type="Texture2D" uid="uid://pj4hgnkpam2k" path="res://assets/info_face/Hombre/Neck_c.png" id="8_1i8l8"]
[ext_resource type="Texture2D" uid="uid://ba432tqbw5c1h" path="res://assets/info_face/Accesorios/moustache.png" id="9_htgb0"]
[ext_resource type="Texture2D" uid="uid://cfng6impxlulo" path="res://assets/info_face/Accesorios/earing2.png" id="10_4mcdv"]

[node name="NpcViewerWindow" type="Window"]
initial_position = 2
size = Vector2i(500, 500)
script = ExtResource("1_4mcdv")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PortraitPanel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(226, 226)
layout_mode = 2

[node name="InfoFaceTextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PortraitPanel" instance=ExtResource("2_4mcdv")]
layout_mode = 0
anchors_preset = 0

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PortraitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jcilu")
expand_mode = 2
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PortraitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_htgb0")
expand_mode = 2
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PortraitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_4mcdv")
expand_mode = 2
stretch_mode = 4

[node name="TextureRect5" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PortraitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_a2sdq")
expand_mode = 2
stretch_mode = 4

[node name="TextureRect6" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PortraitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_55sft")
expand_mode = 2
stretch_mode = 4

[node name="TextureRect7" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PortraitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_fujny")
expand_mode = 2
stretch_mode = 4

[node name="TextureRect8" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PortraitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_1i8l8")
expand_mode = 2
stretch_mode = 4

[node name="TextureRect9" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PortraitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_htgb0")
expand_mode = 2
stretch_mode = 4

[node name="TextureRect10" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PortraitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_4mcdv")
expand_mode = 2
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Name"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="GenderLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Gender"

[node name="AgeLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Age"

[node name="LicensePlateLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "License Plate"

[node name="PhoneNumberLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Phone Number"

[node name="EmailLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Email"

[node name="EmailPasswordLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Email Password"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BankDomainLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Bank Domain"

[node name="BankAddressLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Bank Address"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Local IP"

[node name="LocalIpLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Local IP"

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Job Title"

[node name="JobRoleLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Job Role"

[node name="HBoxContainer7" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3
text = "Company Align"

[node name="CompanyAlignLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer7"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Company Align"

[node name="HBoxContainer6" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
text = "Zero Day Contact"

[node name="ZeroDayContactLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Zero Day Contact"

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="IsFiredCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Is Fired?"

[node name="HasRumorCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Has Rumor?"
